@@ -75,5 +75,6 @@ TODO: maybe work around 3.996gb barrier in pread/pwrite as well, maybe readahead
           (cygwin) provides them for a while now.
         - provide pread/pwrite implementations for win32.
         - implement aio_realpath for windows.
-        - add EIO_FALLOC_FL_COLLAPSE_RANGE anbd EIO_FALLOC_FL_ZERO_RANGE.
+        - add EIO_FALLOC_FL_COLLAPSE_RANGE and EIO_FALLOC_FL_ZERO_RANGE.
+        - add EIO_FCNTL, EIO_IOCTL.
 
